# Particle_Sim

./: .gitignore  CMakeLists.txt  README.md  build  build.sh  clean  clean.sh  params.txt  particles
include/: params.hpp  utils.hpp
old/: old_v1_1.cpp  old_v1_2.cpp  old_v1_3.cpp  old_v1_4.cpp  old_v1_5.cpp
src/: main.cpp  utils.cpp
